[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://script/shield_knight.gd" id="1"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(14, 22)

[node name="ShieldKnight" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 1
script = ExtResource("1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("1")

[node name="RayCastRight" type="RayCast2D" parent="."]
target_position = Vector2(16, 0)

[node name="RayCastDown" type="RayCast2D" parent="."]
position = Vector2(8, 0)
target_position = Vector2(0, 20)

[node name="HurtArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="HurtShape" type="CollisionShape2D" parent="HurtArea"]
shape = SubResource("1")

[connection signal="body_entered" from="HurtArea" to="." method="_on_hurt_area_body_entered"]
